Board6_2 boardUpdate 완료